version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/OutcomeType.rst.txt
.. vale off



:class:`OutcomeType`
====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   This enum is referenced in the “Outcome” tree node and reflects the type of outcome being configured. Based on the type of an outcome different rules are applied which define the applicable list of outcome data to be used.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: OutcomeType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Checkpoint`
            - 
          * - :py:attr:`~Custom`
            - 
          * - :py:attr:`~EdgeZoneScope`
            - 
          * - :py:attr:`~EnclosureExternalScope`
            - 
          * - :py:attr:`~EnclosureInternalScope`
            - 
          * - :py:attr:`~EnclosureScope`
            - 
          * - :py:attr:`~ExtrusionEndScope`
            - 
          * - :py:attr:`~ExtrusionStartScope`
            - 
          * - :py:attr:`~FaceZoneScope`
            - 
          * - :py:attr:`~FailureInfo`
            - 
          * - :py:attr:`~InternalVolumeZoneScope`
            - 
          * - :py:attr:`~Performance`
            - 
          * - :py:attr:`~PythonTraceback`
            - 
          * - :py:attr:`~Scope`
            - 
          * - :py:attr:`~SizeField`
            - 
          * - :py:attr:`~StackerBaseFace`
            - 
          * - :py:attr:`~Undefined`
            - 
          * - :py:attr:`~VolumeZoneScope`
            - 








Attribute detail
----------------
.. py:attribute:: Checkpoint
   :value: 3


.. py:attribute:: Custom
   :value: 1


.. py:attribute:: EdgeZoneScope
   :value: 13


.. py:attribute:: EnclosureExternalScope
   :value: 9


.. py:attribute:: EnclosureInternalScope
   :value: 8


.. py:attribute:: EnclosureScope
   :value: 7


.. py:attribute:: ExtrusionEndScope
   :value: 11


.. py:attribute:: ExtrusionStartScope
   :value: 10


.. py:attribute:: FaceZoneScope
   :value: 14


.. py:attribute:: FailureInfo
   :value: 6


.. py:attribute:: InternalVolumeZoneScope
   :value: 16


.. py:attribute:: Performance
   :value: 2


.. py:attribute:: PythonTraceback
   :value: 12


.. py:attribute:: Scope
   :value: 4


.. py:attribute:: SizeField
   :value: 5


.. py:attribute:: StackerBaseFace
   :value: 17


.. py:attribute:: Undefined
   :value: 0


.. py:attribute:: VolumeZoneScope
   :value: 15






.. vale on