version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/OutcomeType.rst.txt
.. vale off



:class:`OutcomeType`
====================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   This enum is referenced in the “Outcome” tree node and reflects the type of outcome being configured. Based on the type of an outcome different rules are applied which define the applicable list of outcome data to be used.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: OutcomeType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AdvancedTopologyDiagnostics`
            - 
          * - :py:attr:`~CSVProcessing`
            - 
          * - :py:attr:`~Checkpoint`
            - 
          * - :py:attr:`~Custom`
            - 
          * - :py:attr:`~EdgeZoneScope`
            - 
          * - :py:attr:`~EnclosureExternalScope`
            - 
          * - :py:attr:`~EnclosureInternalScope`
            - 
          * - :py:attr:`~EnclosureScope`
            - 
          * - :py:attr:`~ExtrusionEndScope`
            - 
          * - :py:attr:`~ExtrusionStartScope`
            - 
          * - :py:attr:`~FaceZoneScope`
            - 
          * - :py:attr:`~FailedTopology`
            - 
          * - :py:attr:`~FailureInfo`
            - 
          * - :py:attr:`~InternalVolumeZoneScope`
            - 
          * - :py:attr:`~MergeNodes`
            - 
          * - :py:attr:`~NewTopology`
            - 
          * - :py:attr:`~Performance`
            - 
          * - :py:attr:`~PythonTraceback`
            - 
          * - :py:attr:`~QualityMetrics`
            - 
          * - :py:attr:`~Recording`
            - 
          * - :py:attr:`~Scope`
            - 
          * - :py:attr:`~SizeFieldName`
            - 
          * - :py:attr:`~StackerBaseFace`
            - 
          * - :py:attr:`~StackerDiagnostics`
            - 
          * - :py:attr:`~SurfaceDiagnostics`
            - 
          * - :py:attr:`~TopologyCountChange`
            - 
          * - :py:attr:`~TopologyDiagnostics`
            - 
          * - :py:attr:`~TubeSplittingCaps`
            - 
          * - :py:attr:`~TubeSplittingFaces`
            - 
          * - :py:attr:`~TubeSplittingVolumes`
            - 
          * - :py:attr:`~Undefined`
            - 
          * - :py:attr:`~VolumeZoneScope`
            - 








Attribute detail
----------------
.. py:attribute:: AdvancedTopologyDiagnostics
   :value: 30


.. py:attribute:: CSVProcessing
   :value: 23


.. py:attribute:: Checkpoint
   :value: 3


.. py:attribute:: Custom
   :value: 1


.. py:attribute:: EdgeZoneScope
   :value: 17


.. py:attribute:: EnclosureExternalScope
   :value: 13


.. py:attribute:: EnclosureInternalScope
   :value: 12


.. py:attribute:: EnclosureScope
   :value: 11


.. py:attribute:: ExtrusionEndScope
   :value: 15


.. py:attribute:: ExtrusionStartScope
   :value: 14


.. py:attribute:: FaceZoneScope
   :value: 18


.. py:attribute:: FailedTopology
   :value: 32


.. py:attribute:: FailureInfo
   :value: 10


.. py:attribute:: InternalVolumeZoneScope
   :value: 20


.. py:attribute:: MergeNodes
   :value: 24


.. py:attribute:: NewTopology
   :value: 31


.. py:attribute:: Performance
   :value: 2


.. py:attribute:: PythonTraceback
   :value: 16


.. py:attribute:: QualityMetrics
   :value: 7


.. py:attribute:: Recording
   :value: 6


.. py:attribute:: Scope
   :value: 4


.. py:attribute:: SizeFieldName
   :value: 5


.. py:attribute:: StackerBaseFace
   :value: 21


.. py:attribute:: StackerDiagnostics
   :value: 25


.. py:attribute:: SurfaceDiagnostics
   :value: 8


.. py:attribute:: TopologyCountChange
   :value: 29


.. py:attribute:: TopologyDiagnostics
   :value: 9


.. py:attribute:: TubeSplittingCaps
   :value: 28


.. py:attribute:: TubeSplittingFaces
   :value: 26


.. py:attribute:: TubeSplittingVolumes
   :value: 27


.. py:attribute:: Undefined
   :value: 0


.. py:attribute:: VolumeZoneScope
   :value: 19






.. vale on